correction de overflow y en auto

--- a/src/styles/AllTransaction.module.css
+++ b/src/styles/AllTransaction.module.css
@@ -2,7 +2,7 @@
     border: 3px solid var(--color-tertiary);
     width: 650px;
     height: 700px;
-    overflow-y: scroll;
+    overflow-y: auto;
     background-color: var(--color-secondary);
     display: flex;
     align-content: flex-start;
