--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,6 +19,7 @@ body{
   background-color: var(--color-primary) ;
   color:var(--color-secondary);
   font-family: "deeper";
+  max-height: 100vh;
 }
 
 
